--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "^3.1.2",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@pinia/nuxt": "^0.11.0",
     "nuxt": "^3.17.4",
+    "pinia": "^3.0.2",
     "typescript": "^5.8.3",
     "vue": "^3.5.14",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-carousel": "^0.15.1"
   },
   "devDependencies": {
     "prettier": "^3.5.3"
