--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@pinia/nuxt": "^0.11.0",
     "nuxt": "^3.17.4",
     "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "typescript": "^5.8.3",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1",
