--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "vue3-carousel": "^0.15.1"
   },
   "devDependencies": {
-    "prettier": "^3.5.3"
+    "@nuxt/eslint-config": "^1.4.1",
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-vue": "^10.2.0",
+    "prettier": "^3.5.3",
+    "vue-tsc": "^2.2.10"
   }
 }
