--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "vue3-carousel": "^0.15.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@nuxt/eslint-config": "^1.4.1",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^10.2.0",
     "prettier": "^3.5.3",
+    "vue-eslint-parser": "^10.1.3",
     "vue-tsc": "^2.2.10"
   }
 }
