--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^10.2.0",
+    "globals": "^16.2.0",
     "prettier": "^3.5.3",
+    "typescript-eslint": "^8.34.0",
     "vue-eslint-parser": "^10.1.3",
     "vue-tsc": "^2.2.10"
   }
